improved picture element and added figcaption functionality

--- a/src/components/Description.astro
+++ b/src/components/Description.astro
@@ -13,7 +13,7 @@
     background-color: var(--main-bg-color);
     z-index: 1;
     color: var(--color-gray-100);
-    font-size: 150%;
+    font-size: clamp(1.25rem, 4vw, 1.5rem);
     line-height: 1.75;
     font-weight: 300;
   }
