--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -104,15 +104,15 @@ import Card from "../components/Card.astro";
       service="CSGO"
       description="Bomb has been planted"
       svg="csgo"
-      buttonhref="https://store.steampowered.com/app/730/CounterStrike_Global_Offensive/"
-      buttonsuffix="Steam Page"
+      buttonhref="games/csgo"
+      buttonsuffix="More Info"
     />
     <Card
       service="Factorio"
       description="The Factory Must Grow!"
       svg="factorio"
-      buttonhref="https://store.steampowered.com/app/427520/Factorio/"
-      buttonsuffix="Steam Page"
+      buttonhref="games/factorio"
+      buttonsuffix="More Info"
     />
     <Card
       service="Farming Simulator 22"
@@ -132,15 +132,15 @@ import Card from "../components/Card.astro";
       service="Rocket League"
       description="Calculated"
       svg="rocketleague_2"
-      buttonhref="https://store.steampowered.com/app/252950/Rocket_League/"
-      buttonsuffix="Steam Page"
+      buttonhref="games/rocketleague"
+      buttonsuffix="More Info"
     />
     <Card
       service="Sea of Thieves"
       description="You want bannana?"
       svg="seaofthieves"
-      buttonhref="https://store.steampowered.com/app/1172620/Sea_of_Thieves_2023_Edition/"
-      buttonsuffix="Steam Page"
+      buttonhref="games/seaofthieves"
+      buttonsuffix="More Info"
     />
     <Card
       service="Skyrim"
