implemented new aliases

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,9 +1,9 @@
 ---
-import Layout from "../layouts/Layout.astro";
-import SectionGrid from "../components/SectionGrid.astro";
-import Rig from "../components/Rig.astro";
-import RigEntry from "../components/RigEntry.astro";
-import Card from "../components/Card.astro";
+import Layout from "@layouts/Layout.astro";
+import SectionGrid from "@components/SectionGrid.astro";
+import Rig from "@components/Rig.astro";
+import RigEntry from "@components/RigEntry.astro";
+import Card from "@components/Card.astro";
 ---
 
 <Layout
