--- a/src/pages/games/seaofthieves.astro
+++ b/src/pages/games/seaofthieves.astro
@@ -1,5 +1,5 @@
 ---
-import Layout from "../../layouts/Layout.astro";
+import Layout from "@layouts/Layout.astro";
 import HeroImage from "@components/HeroImage.astro";
 import Description from "@components/Description.astro";
 import Rig from "@components/Rig.astro";
