--- a/src/components/HeroImage.astro
+++ b/src/components/HeroImage.astro
@@ -16,7 +16,7 @@ const { default: svgtext } = await import(`../images/${svg}.svg?raw`);
 <style>
   section {
     padding: 0 1em;
-    background-color: var(--main-bg-color);
+    background-color: transparent;
     z-index: 1;
 
     /* padding-block-end: 0 !important; */
